get and delete reservations
