# swagger.yml
@@ -37,7 +37,72 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Result'
-
+  /book/{reservation_id}:
+    get:
+      tags:
+        - Book
+      summary: Get a single reservation
+      operationId: app.get_booking
+      parameters:
+        - name: reservation_id
+          in: path
+          description: Reservation's Unique identifier
+          required: true
+          example: 54
+          schema:
+            type: integer
+      responses:
+        200:
+          description: Return Book
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/SimpleBook'
+        404:
+          description: Reservation not found
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Result'
+    delete:
+      tags:
+        - Book
+      summary: Delete a reservation
+      operationId: app.delete_booking
+      parameters:
+        - name: reservation_id
+          in: path
+          description: Reservation's Unique identifier
+          required: true
+          example: 54
+          schema:
+            type: integer
+        - name: user_id
+          in: query
+          description: Reservation's Unique identifier
+          required: true
+          example: 12
+          schema:
+            type: integer
+      responses:
+        200:
+          description: "The operation is successful"
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Result'
+        400:
+          description: "The code returned if there is some error on server, e.g: param not specified"
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Result'
+        404:
+          description: Reservation not found
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Result'
 components:
   schemas:
     RequestBooking:
@@ -89,6 +154,47 @@ components:
           type: string
           description: The booked Table name
           example: "Table 23A"
+    SimpleBook:
+      required:
+        - id
+        - reservation_date
+        - reservation_end
+        - customer_id
+        - table_id
+        - people_number
+        - checkin
+      type: object
+      properties:
+        id:
+          type: integer
+          description: The ID of the new booking
+          example: 564
+        reservation_date:
+          type: string
+          format: date-time
+          description: Reservation datetime
+          example: "2021-07-21T20:30:00Z"
+        reservation_end:
+          type: string
+          format: date-time
+          description: Reservation end datetime
+          example: "2021-07-21T20:50:00Z"
+        customer_id:
+          type: integer
+          description: Customer of the Reservation
+          example: 12
+        table_id:
+          type: integer
+          description: Table of Reservation
+          example: 142
+        people_number:
+          type: integer
+          description: Number of the people in the booking
+          example: 3
+        checkin:
+          type: boolean
+          description: If customer entered the restaurant
+          example: True
     Result:
       required:
         - code
